Some fixes and improvements. Self-compilation: 1.5%